--- a/.gitignore
+++ b/.gitignore
@@ -10,12 +10,24 @@ open-webui/
 flowise/
 langflow/
 
+# Backups
+backups/
+*.tar.gz
+*.tgz
+
 # n8n backups (if you don't want to commit them)
 # n8n/backup/
 
 # OS generated files
 .DS_Store
 Thumbs.db
+*.swp
+*.swo
+*.tmp
+*.bak
+*~
+
+# Shared data
 n8n/shared/
 n8n/backup/credentials/
 !n8n/backup/credentials_public/
