fix: update vLLM CPU image to valid tag v0.7.2

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -208,7 +208,7 @@ services:
   # ──────────────── vLLM (OpenAI Compatible) ────────────────
   vllm:
     profiles: ["cpu"]
-    image: ${VLLM_IMAGE:-public.ecr.aws/q9t5s3a7/vllm-cpu-release-repo:v0.6.3.post1}
+    image: ${VLLM_IMAGE:-public.ecr.aws/q9t5s3a7/vllm-cpu-release-repo:v0.7.2}
     container_name: vllm
     networks: ["demo"]
     restart: unless-stopped
