--- a/.env-example
+++ b/.env-example
@@ -29,7 +29,7 @@ OLLAMA_HOST=localhost
 
 # ──────────────── vLLM ────────────────
 VLLM_PORT=8000
-VLLM_IMAGE=public.ecr.aws/q9t5s3a7/vllm-cpu-release-repo:v0.6.3.post1
+VLLM_IMAGE=public.ecr.aws/q9t5s3a7/vllm-cpu-release-repo:v0.7.2
 VLLM_MODEL=huihui-ai/Huihui-Qwen3-VL-32B-Thinking-abliterated
 HF_TOKEN=
 
