--- a/docker/vllm/Dockerfile
+++ b/docker/vllm/Dockerfile
@@ -23,7 +23,7 @@ ENV VLLM_TARGET_DEVICE=cpu
 
 # We install directly from the repo to get the latest CPU support
 # This might take 10-20 minutes to build!
-RUN pip install vllm
+RUN pip install vllm --no-binary vllm
 RUN pip install --upgrade transformers
 
 # Expose port
