Fix Lakera workflow JSON error and add converted guides

--- a/.env-example
+++ b/.env-example
@@ -23,6 +23,7 @@ N8N_BASIC_AUTH_PASSWORD=change_me
 # ---------------- Ollama ----------------
 OLLAMA_PORT=11434
 OLLAMA_HOST=localhost
+OLLAMA_KEEP_ALIVE=-1
 
 # To build vLLM locally (CPU), uncomment the line below:
 # COMPOSE_FILE=docker-compose.yml:docker-compose.vllm-build.yml
